--
-- PostgreSQL database dump
--

-- Dumped from database version 16.13 (Debian 16.13-1.pgdg13+1)
-- Dumped by pg_dump version 16.13 (Debian 16.13-1.pgdg13+1)

SET statement_timeout = 0;
SET lock_timeout = 0;
SET idle_in_transaction_session_timeout = 0;
SET client_encoding = 'UTF8';
SET standard_conforming_strings = on;
SELECT pg_catalog.set_config('search_path', '', false);
SET check_function_bodies = false;
SET xmloption = content;
SET client_min_messages = warning;
SET row_security = off;

SET default_tablespace = '';

SET default_table_access_method = heap;

--
-- Name: answers; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.answers (
    id bigint NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    duration_sec integer,
    ended_at timestamp(6) without time zone,
    eye_contact_score integer,
    filler_word_count integer,
    posture_score integer,
    question_text text,
    silence_count integer,
    speech_rate numeric(10,2),
    started_at timestamp(6) without time zone,
    stt_status character varying(30),
    transcript text,
    session_id bigint NOT NULL,
    CONSTRAINT answers_stt_status_check CHECK (((stt_status)::text = ANY ((ARRAY['PENDING'::character varying, 'COMPLETED'::character varying, 'FAILED'::character varying])::text[])))
);


--
-- Name: answers_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.answers ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.answers_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: documents; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.documents (
    id bigint NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    doc_type character varying(30) NOT NULL,
    file_size bigint NOT NULL,
    file_type character varying(100) NOT NULL,
    original_file_name character varying(255) NOT NULL,
    status character varying(30) NOT NULL,
    storage_bucket character varying(255) NOT NULL,
    storage_path character varying(1000) NOT NULL,
    storage_provider character varying(20) NOT NULL,
    summary text,
    upload_status character varying(20) NOT NULL,
    upload_url_expires_at timestamp(6) without time zone,
    uploaded_at timestamp(6) without time zone,
    session_id bigint NOT NULL,
    user_id bigint NOT NULL,
    CONSTRAINT documents_doc_type_check CHECK (((doc_type)::text = ANY ((ARRAY['RESUME'::character varying, 'PORTFOLIO'::character varying, 'JOB_DESCRIPTION'::character varying, 'ETC'::character varying])::text[]))),
    CONSTRAINT documents_status_check CHECK (((status)::text = ANY ((ARRAY['CREATED'::character varying, 'READY_FOR_AI'::character varying, 'PROCESSING'::character varying, 'COMPLETED'::character varying, 'FAILED'::character varying])::text[]))),
    CONSTRAINT documents_storage_provider_check CHECK (((storage_provider)::text = 'GCS'::text)),
    CONSTRAINT documents_upload_status_check CHECK (((upload_status)::text = ANY ((ARRAY['PENDING'::character varying, 'UPLOADED'::character varying, 'FAILED'::character varying])::text[])))
);


--
-- Name: documents_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.documents ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.documents_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: feedbacks; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.feedbacks (
    id bigint NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    delivery_score integer,
    evidence text,
    improvement_example text,
    relevance_score integer,
    specificity_score integer,
    structure_score integer,
    summary text,
    answer_id bigint NOT NULL
);


--
-- Name: feedbacks_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.feedbacks ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.feedbacks_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: session_events; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.session_events (
    id bigint NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    event_order integer NOT NULL,
    event_type character varying(100) NOT NULL,
    payload_json text,
    session_id bigint NOT NULL,
    CONSTRAINT session_events_event_type_check CHECK (((event_type)::text = ANY ((ARRAY['SESSION_CREATED'::character varying, 'SESSION_STARTED'::character varying, 'QUESTION_GENERATED'::character varying, 'ANSWER_SUBMITTED'::character varying, 'FEEDBACK_CREATED'::character varying, 'REPORT_CREATED'::character varying, 'SESSION_COMPLETED'::character varying, 'SESSION_FAILED'::character varying])::text[])))
);


--
-- Name: session_events_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.session_events ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.session_events_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: sessions; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.sessions (
    id bigint NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    answer_time_limit_sec integer NOT NULL,
    completed_at timestamp(6) without time zone,
    difficulty character varying(30),
    mode character varying(30),
    started_at timestamp(6) without time zone,
    status character varying(20) NOT NULL,
    target character varying(30),
    user_id bigint NOT NULL,
    CONSTRAINT sessions_difficulty_check CHECK (((difficulty)::text = ANY ((ARRAY['EASY'::character varying, 'NORMAL'::character varying, 'HARD'::character varying])::text[]))),
    CONSTRAINT sessions_mode_check CHECK (((mode)::text = ANY ((ARRAY['INTERVIEW'::character varying, 'PRESENTATION'::character varying])::text[]))),
    CONSTRAINT sessions_status_check CHECK (((status)::text = ANY ((ARRAY['READY'::character varying, 'IN_PROGRESS'::character varying, 'COMPLETED'::character varying, 'FAILED'::character varying])::text[]))),
    CONSTRAINT sessions_target_check CHECK (((target)::text = ANY ((ARRAY['BACKEND'::character varying, 'FRONTEND'::character varying, 'FULLSTACK'::character varying, 'AI_ML'::character varying, 'DATA'::character varying, 'DEVOPS'::character varying, 'MOBILE'::character varying, 'QA'::character varying])::text[])))
);


--
-- Name: sessions_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.sessions ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.sessions_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: users; Type: TABLE; Schema: public; Owner: -
--

CREATE TABLE public.users (
    id bigint NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    email character varying(255),
    nickname character varying(50),
    profile_image_url character varying(500),
    provider character varying(20) NOT NULL,
    provider_user_id character varying(100) NOT NULL,
    role character varying(20) NOT NULL,
    CONSTRAINT users_provider_check CHECK (((provider)::text = 'GOOGLE'::text)),
    CONSTRAINT users_role_check CHECK (((role)::text = ANY ((ARRAY['USER'::character varying, 'ADMIN'::character varying])::text[])))
);


--
-- Name: users_id_seq; Type: SEQUENCE; Schema: public; Owner: -
--

ALTER TABLE public.users ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.users_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- Name: answers answers_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.answers
    ADD CONSTRAINT answers_pkey PRIMARY KEY (id);


--
-- Name: documents documents_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.documents
    ADD CONSTRAINT documents_pkey PRIMARY KEY (id);


--
-- Name: feedbacks feedbacks_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.feedbacks
    ADD CONSTRAINT feedbacks_pkey PRIMARY KEY (id);


--
-- Name: session_events session_events_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.session_events
    ADD CONSTRAINT session_events_pkey PRIMARY KEY (id);


--
-- Name: sessions sessions_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.sessions
    ADD CONSTRAINT sessions_pkey PRIMARY KEY (id);


--
-- Name: users uk_users_provider_provider_user_id; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.users
    ADD CONSTRAINT uk_users_provider_provider_user_id UNIQUE (provider, provider_user_id);


--
-- Name: users users_pkey; Type: CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.users
    ADD CONSTRAINT users_pkey PRIMARY KEY (id);


--
-- Name: feedbacks fke78e1jcpnve0ou63855s2vh1u; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.feedbacks
    ADD CONSTRAINT fke78e1jcpnve0ou63855s2vh1u FOREIGN KEY (answer_id) REFERENCES public.answers(id);


--
-- Name: session_events fkfxhd5y6p6m58pbqteo9rloicg; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.session_events
    ADD CONSTRAINT fkfxhd5y6p6m58pbqteo9rloicg FOREIGN KEY (session_id) REFERENCES public.sessions(id);


--
-- Name: answers fkg66ohbyh45ph295oir9yv0tcw; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.answers
    ADD CONSTRAINT fkg66ohbyh45ph295oir9yv0tcw FOREIGN KEY (session_id) REFERENCES public.sessions(id);


--
-- Name: documents fkkxttj4tp5le2uth212lu49vny; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.documents
    ADD CONSTRAINT fkkxttj4tp5le2uth212lu49vny FOREIGN KEY (user_id) REFERENCES public.users(id);


--
-- Name: documents fkr56ubnc3bdgys5ki3bxgh999i; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.documents
    ADD CONSTRAINT fkr56ubnc3bdgys5ki3bxgh999i FOREIGN KEY (session_id) REFERENCES public.sessions(id);


--
-- Name: sessions fkruie73rneumyyd1bgo6qw8vjt; Type: FK CONSTRAINT; Schema: public; Owner: -
--

ALTER TABLE ONLY public.sessions
    ADD CONSTRAINT fkruie73rneumyyd1bgo6qw8vjt FOREIGN KEY (user_id) REFERENCES public.users(id);


--
-- PostgreSQL database dump complete
--

