CREATE TABLE public.reports (
    id bigint GENERATED BY DEFAULT AS IDENTITY NOT NULL,
    created_at timestamp(6) without time zone NOT NULL,
    improvements text,
    strengths text,
    total_score integer,
    session_id bigint NOT NULL
);

ALTER TABLE ONLY public.reports
    ADD CONSTRAINT reports_pkey PRIMARY KEY (id);

ALTER TABLE ONLY public.reports
    ADD CONSTRAINT uk_reports_session_id UNIQUE (session_id);

ALTER TABLE ONLY public.reports
    ADD CONSTRAINT fk_reports_session
    FOREIGN KEY (session_id) REFERENCES public.sessions(id);